Add missing WillNotClose annotations within PathFileObject